--- a/smart-presenter/public/index.html
+++ b/smart-presenter/public/index.html
@@ -11,6 +11,7 @@
     <noscript>
       <strong>We're sorry but smart-presenter doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <canvas id="canvas"></canvas>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
